--- a/index.html
+++ b/index.html
@@ -89,13 +89,12 @@
   <!-- Contact Section -->
   <section id="contact" class="contact animate">
   <h2>Kontak Saya</h2>
-  <form id="contactForm" onsubmit="return false;">
-    <input type="text" id="name" placeholder="Nama Anda" required />
-    <input type="email" id="email" placeholder="Email Anda" required />
-    <textarea id="message" placeholder="Pesan Anda..." required></textarea>
-    <button type="button" id="sendBtn">Kirim Pesan</button>
-  </form>
+  <p>Kalau ingin menghubungi saya, bisa langsung WhatsApp ke nomor berikut:</p>
+  <a href="https://wa.me/6281234567890" target="_blank" rel="noopener" class="contact-number">
+    +62 812-3456-7890
+  </a>
 </section>
+
 
 
   <!-- Footer -->
