--- a/index.html
+++ b/index.html
@@ -89,11 +89,12 @@
   <!-- Contact Section -->
   <section id="contact" class="contact animate">
   <h2>Kontak Saya</h2>
-  <p>Kalau ingin menghubungi saya, bisa langsung WhatsApp ke nomor berikut:</p>
-  <a href="https://wa.me/6285732162064" target="_blank" rel="noopener" class="contact-number">
-    +62 857-3216-2064
+  <p>Ingin terhubung? Klik tombol di bawah untuk mengirim pesan lewat WhatsApp.</p>
+  <a href="https://wa.me/6281234567890" target="_blank" rel="noopener" class="wa-button">
+    Hubungi via WhatsApp
   </a>
 </section>
+
 
 
 
