--- a/index.html
+++ b/index.html
@@ -10,18 +10,17 @@
 <body>
 
   <!-- Header -->
-  <header class="header">
-    <div class="logo">DzakiAdani</div>
-    <nav>
-      <ul class="nav-links">
-        <li><a href="#home">Beranda</a></li>
-        <li><a href="#about">Tentang</a></li>
-        <li><a href="#skills">Keahlian</a></li>
-        <li><a href="#projects">Proyek</a></li>
-        <li><a href="#contact">Kontak</a></li>
-      </ul>
-    </nav>
-  </header>
+ <header class="header">
+  <div class="logo">DzakiDev</div>
+  <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+  <ul class="nav-links" id="navLinks">
+    <li><a href="#beranda">Beranda</a></li>
+    <li><a href="#tentang">Tentang</a></li>
+    <li><a href="#layanan">Layanan</a></li>
+    <li><a href="#kontak">Kontak</a></li>
+  </ul>
+</header>
+
 
   <!-- Hero Section -->
   <section id="home" class="hero">
