--- a/index.html
+++ b/index.html
@@ -81,6 +81,18 @@
         <h3>Profil Interaktif</h3>
         <p>Website CV pribadi dengan animasi dan UI responsif</p>
       </div>
+            <!-- PROJECT GYM -->
+      <div class="card animate project-card" onclick="openGymModal()">
+        <img src="img/gym.png" alt="Gym Management System" class="icon">
+        <h3>Gym Member Management</h3>
+        <p>Sistem pendataan member gym berbasis Laravel dengan autentikasi dan manajemen keanggotaan.
+        </p>
+        <div class="project-tech">
+        <span>Laravel</span>
+        <span>MySQL</span>
+        <span>Bootstrap</span>
+        </div>
+      </div> 
     </div>
   </section>
 
@@ -133,3 +145,4 @@
   </script>
 </body>
 </html>
+
